@@ -7,6 +7,7 @@
         * IB/qib: include slab.h as necessary for newer kernels
         * IB/qib: optimize pio ack buffer allocation
         * IB/qib: Fix QLE734X link cycling
+        * IB/qib: Display correct value for number of contexts
 2011-02-14 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
         * Tag 1.5.3-10
         * IB/qib: Hold links until tuning data is available
